--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <main>
 
             <section>
-                <div class="container text-center p-2">
-                    بِسْمِ اللهِ الرَّحْمٰنِ الرَّحِيْمِ
+                <div class="container text-center p-2 section-title">
+                    Faculty of Computer Studies
                 </div>
                 <div class="container">
                     <hr>
