--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
                         <a href="#alive-seniors"> &gt; Alive Senior Scholars</a>
 
                         <br><br>
-                        <h5>From Manhaj Salafi</h5>
-                        <a href="#">  &gt; Marok1 Website</a> <br>
-                        <a href="#"> &gt; East Africa Sheikhs</a>
+                        <h5>Communities</h5>
+                        <a href="#">  &gt;</a> <br>
+                        <a href="#"> &gt; Computer Association</a>
 
                     </div>
 
