--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="container pt-2">
                 
                 <span class="web-for" id="late-seniors">
-                    <i class="bi bi-globe"></i> Websites for &#8212;
+                    <i class="bi bi-globe"></i>  &#8212;
                 </span>
                 <h4 class="section-title">Students of Sheikh Al Albani</h4>
                 <p class="section-subtitle">May Allaah shower upon him His Mercy</p>
@@ -129,13 +129,15 @@
                 <div class="row">
                     
                     <div class="col-md-4">
-                        <h5>About IUA</h5>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas eos unde tenetur distinctio
-                        dignissimos atque, odit eius, aliquid possimus aut nobis pariatur. Autem distinctio ducimus
-                        voluptas ut ea expedita hic!.<br>
-                        <br>
-                        <br><br>
-                        For any observation and addition please contact us through our <b> <a href="https://github.com/">Github</a> </b> page.
+                        <h5>Address</h5>
+                        <p>
+                            International University of Africa <br>
+                            Southern Campus - Salama Road <br>
+                            + 249 123 456 789
+
+                        </p>
+
+                        For any observations and addition please contact us through our <b> <a href="https://github.com/">Github</a> </b> page.
                     </div>
 
                     <div class="col-md-4"></div>
