top of page icons

--- a/index.html
+++ b/index.html
@@ -37,8 +37,23 @@
         <main>
 
             <section>
-                <div class="container text-center p-2 section-title">
-                    Faculty of Computer Studies
+                <div class="container"
+                <div class="">
+                    <i class="bi bi-house"></i>
+                </div>
+                <div class="p-2 section-title text-right">
+                    <a href="http://twitter.com/" class="section-title">
+                        <i class="bi bi-twitter social-link-icon"></i>
+                    </a> &nbsp;
+                    <a href="https://www.facebook.com/" class="section-title">
+                        <i class="bi bi-facebook social-link-icon"></i>
+                    </a> &nbsp;
+                    <a href="https://www.instagram.com/" class="section-title">
+                        <i class="bi bi-instagram social-link-icon"></i>
+                    </a> &nbsp;
+                    <a href="https://www.youtube.com/" class="section-title">
+                        <i class="bi bi-youtube social-link-icon"></i>
+                    </a>
                 </div>
                 <div class="container">
                     <hr>
@@ -88,21 +103,17 @@
                     </div>
 
                 <div class="container pb-3">
-                    <quote>
-                        &ldquo;
-                        There is no fault (blame) upon the one who proclaims the madhhab of the Salaf, who ascribes to it and affiliates himself to it. Rather, it is obligatory to accept that from him by unanimous agreement, for the madhhab of the Salaf is never but the truth.&rdquo;
-                        <br>— Ibn Taymiyyah (Majmoo' al-Fatawaa 4/149)
-                    </quote>
+                    
                 </div>
             </section>
 
             <div class="container pt-2">
                 
                 <span class="web-for" id="late-seniors">
-                    <i class="bi bi-globe"></i>  &#8212;
+                    <i class="bi bi-globe"></i> International University of Africa &#8212;
                 </span>
-                <h4 class="section-title">Students of Sheikh Al Albani</h4>
-                <p class="section-subtitle">May Allaah shower upon him His Mercy</p>
+                <h4 class="section-title">Faculty of Computer Studies</h4>
+                <p class="section-subtitle"></p>
 
                 <ul class="list-unstyled">
                     <li class="scholar">
