--- a/index.html
+++ b/index.html
@@ -37,26 +37,30 @@
         <main>
 
             <section>
-                <div class="container"
-                <div class="">
-                    <i class="bi bi-house"></i>
-                </div>
-                <div class="p-2 section-title text-right">
-                    <a href="http://twitter.com/" class="section-title">
-                        <i class="bi bi-twitter social-link-icon"></i>
-                    </a> &nbsp;
-                    <a href="https://www.facebook.com/" class="section-title">
-                        <i class="bi bi-facebook social-link-icon"></i>
-                    </a> &nbsp;
-                    <a href="https://www.instagram.com/" class="section-title">
-                        <i class="bi bi-instagram social-link-icon"></i>
-                    </a> &nbsp;
-                    <a href="https://www.youtube.com/" class="section-title">
-                        <i class="bi bi-youtube social-link-icon"></i>
-                    </a>
-                </div>
                 <div class="container">
-                    <hr>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <a href="http://www.iua.edu.sd"><i class="bi bi-house-fill section-title"></i> Home </a>
+                        </div>
+                        <div class="col-md-6 p-2 section-title text-right">
+                            <a href="http://twitter.com/" class="section-title">
+                                <i class="bi bi-twitter social-link-icon"></i>
+                            </a> &nbsp;
+                            <a href="https://www.facebook.com/" class="section-title">
+                                <i class="bi bi-facebook social-link-icon"></i>
+                            </a> &nbsp;
+                            <a href="https://www.instagram.com/" class="section-title">
+                                <i class="bi bi-instagram social-link-icon"></i>
+                            </a> &nbsp;
+                            <a href="https://www.youtube.com/" class="section-title">
+                                <i class="bi bi-youtube social-link-icon"></i>
+                            </a>
+                        </div>
+                    </div>
+                    
+                    <div class="container">
+                        <hr>
+                    </div>
                 </div>
             </section>
 
