--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
                             <a href="http://www.iua.edu.sd"><i class="bi bi-house-fill section-title"></i> Home </a>
                         </div>
                         <div class="col-md-6 p-2 section-title text-right">
+                            <a href="tel:+249127133377" class="phone-numer">+249 127 133 377</a> &nbsp; &nbsp; 
+
                             <a href="http://twitter.com/" class="section-title">
                                 <i class="bi bi-twitter social-link-icon"></i>
                             </a> &nbsp;
