small univ title

--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
 
             <div class="container pt-2">
                 
-                <span class="web-for" id="late-seniors">
-                    <i class="bi bi-globe"></i> International University of Africa &#8212;
+                <span class="web-for" id="small-univ-title">
+                    International University of Africa
                 </span>
                 <h4 class="section-title">Faculty of Computer Studies</h4>
                 <p class="section-subtitle"></p>
