news look changed

--- a/index.html
+++ b/index.html
@@ -122,15 +122,19 @@
                 <p class="section-subtitle"></p>
 
                 <ul class="list-unstyled">
-                    <li class="scholar">
-                        <a href=""> Ali ibn Hassan Abdul Hameed Al Halabiy </a>  - May Allaah Have mercy on Him
+                    <li class="news">
+                        <a href=""> Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem tenetur ratione repellat in omnis. Deleniti dicta rerum sint magnam ipsam iste officia temporibus! Sunt nam itaque temporibus natus impedit a! </a>
+                        <br>
+                        <span class="news-info">
+                            <a href="" class="user-tag">Admin</a> | <a href="" class="time-tag">Time Posted</a> | <a href="" class="cat-tag">Category</a>   
+                        </span> 
                     </li>
 
-                    <li class="scholar pt-2 pb-2">
-                        <a href=""> Mashhoor ibn Hassan Aal Salmaan </a> - May Allaah preserve him
+                    <li class="news pt-2 pb-2">
+                        <a href=""> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil magnam minima excepturi beatae, saepe sunt cupiditate eaque non ratione, deleniti, iusto adipisci quaerat dicta eius delectus. Voluptate, repudiandae dolore? </a>
                         <br>
-                        <span class="scholar-info">
-                            <a href="https://midad.com/books/scholar/48474/%D8%AD%D8%A7%D9%81%D8%B8-%D8%A8%D9%86-%D8%A3%D8%AD%D9%85%D8%AF-%D8%A7%D9%84%D8%AD%D9%83%D9%85%D9%8A" class="">Biography</a> | <a href="" class="">Lectures</a> | <a href="" class="">Books</a>   
+                        <span class="news-info">
+                            <a href="" class="user-tag">Admin</a> | <a href="" class="time-tag">Time Posted</a> | <a href="" class="cat-tag">Category</a>   
                         </span>    
                     </li>
                 </ul>
