main page section

--- a/index.html
+++ b/index.html
@@ -121,6 +121,16 @@
                 <h4 class="section-title">Faculty of Computer Studies</h4>
                 <p class="section-subtitle"></p>
 
+
+                <!-- page contents -->
+                <p>
+                    <span>Welcome to Computer Studies Faculty.</span>
+                    <br>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate consequuntur, quidem, vero officia nostrum omnis qui hic sint id velit a sequi, similique exercitationem dolores harum debitis praesentium deserunt ipsum. 
+                </p>
+
+                <!-- News section -->
+                <h4> News </h4>
                 <ul class="list-unstyled">
                     <li class="news">
                         <a href=""> Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem tenetur ratione repellat in omnis. Deleniti dicta rerum sint magnam ipsam iste officia temporibus! Sunt nam itaque temporibus natus impedit a! </a>
