--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                             
                         <br><br>
                         <h5>Communities</h5>
-                        <a href="#"> &gt; Computer Association</a>
+                        <a href="#"> Computer Association</a>
 
                     </div>
 
