styles - footer background n text color

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <div class="col-md-6">
                             <a href="http://www.iua.edu.sd"><i class="bi bi-house-fill section-title"></i> Home </a>
                         </div>
-                        <div class="col-md-6 p-2 section-title text-right">
+                        <div class="col-md-6 section-title text-right">
                             <a href="tel:+249127133377" class="phone-numer">+249 127 133 377</a> &nbsp; &nbsp; 
 
                             <a href="http://twitter.com/" class="section-title">
