Social to follow us

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                     <div class="col-md-4"></div>
                     
                     <div class="col-md-4 ">
-                        <h5>Social</h5>
+                        <h5>FOllow Us</h5>
                         <a href="http://twitter.com/" class="section-title">
                             <i class="bi bi-twitter social-link-icon"></i>
                         </a> &nbsp;
